<resources>
    <string name="app_name">Dont4Get</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="trips_name">Trip\'s name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="signup_here">Sign up here</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>

</resources>